deployment/final_deployment.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: steamchat-ms
  annotations:
    kubernetes.io/ingress.global-static-ip-name: steamchat-microservices
    kubernetes.io/ingress.class: "gce-internal"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /steam/*
        backend:
          serviceName: serv-steam-ms
          servicePort: 8080
      - path: /chat/*
        backend:
          serviceName: serv-chat-ms
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: serv-steam-ms
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: steam-ms
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: serv-chat-ms
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: chat-ms
  type: NodePort
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steam-ms
spec:
  selector:
    matchLabels:
      app: steam-ms
  replicas: 1
  template:
    metadata:
      labels:
        app: steam-ms
    spec:
      containers:
      - name: steam-ms
        image: gcr.io/cc-steam-chat/steam-ms:latest
        ports:
        - containerPort: 5000
